[upd] wiki location

--- a/README
+++ b/README
@@ -55,4 +55,4 @@ Recommended:
 SEE ALSO
 
 ElasticSearch at http://www.elasticsearch.org/
-Elastoman wiki at 
+Elastoman wiki at https://bitbucket.org/vredens/elastoman/wiki/Home
